import { createServer, type Server } from 'node:http'
import { mkdtemp, rm, writeFile } from 'node:fs/promises'
import { tmpdir } from 'node:os'
import { join } from 'node:path'
import { pathToFileURL } from 'node:url'
import { afterEach, expect, it, vi } from 'vitest'
import { agentProfileDigest } from '@deepseek-ai/dsh-agent-presets'
import type { AgentProfileDefinition } from '@deepseek-ai/dsh-agent-presets/types'
import { Context } from '@deepseek-ai/cordis'
import Loader from '@deepseek-ai/cordis-plugin-loader'
import Include from '@deepseek-ai/cordis-plugin-include'
import SessionStore, { SessionId } from '@deepseek-ai/dsh-session'
import AgentRegistry from '@deepseek-ai/dsh-agent'
import AgentLoop from '@deepseek-ai/dsh-agent-loop'
import SystemPrompt from '@deepseek-ai/dsh-system-prompt'
import ToolRuntime from '@deepseek-ai/dsh-tools'
import LlmRuntime, { createUserMessage } from '@deepseek-ai/dsh-llm'
import JsonlPersistence from '@deepseek-ai/dsh-session-persistence-jsonl'
import UserQuestions from '@deepseek-ai/dsh-user-questions'
import { MockAdapter, textResponse, toolCallResponse } from '../../../packages/core/agent-loop/tests/mock-adapter.ts'
import { createApiProxy } from '../../../packages/host/apiproxy/src/api-proxy.ts'
import { InProcessApiClient } from '../../../packages/host/apiproxy/src/fetch/client.ts'
import { toFetchHandler } from '../../../packages/host/apiproxy/src/fetch/handler.ts'
import type { SessionMcpAttachment } from '../../../packages/host/apiproxy/src/api/sessions.ts'

let root: string
const contexts: Context[] = []
const servers: Server[] = []
afterEach(async () => {
  for (const ctx of contexts.splice(0)) await ctx.fiber.dispose()
  for (const server of servers.splice(0)) {
    server.closeAllConnections()
    await new Promise<void>((resolve, reject) => server.close((error) => { if (error) reject(error); else resolve() }))
  }
  if (root) await rm(root, { recursive: true, force: true })
  vi.unstubAllEnvs()
})

async function boot() {
  const ctx = new Context(); contexts.push(ctx)
  ctx.baseUrl = pathToFileURL(root).href + '/'
  await ctx.plugin(Loader)
  ctx.loader.builtins.include = Include
  const modules = new Map<string, unknown>([
    ['sessions', SessionStore], ['agents', AgentRegistry], ['llm', LlmRuntime], ['prompt', SystemPrompt],
    ['tools', ToolRuntime], ['loop', AgentLoop], ['persistence', JsonlPersistence], ['questions', UserQuestions],
  ])
  ctx.loader.internal = { version: 'v2', async import(name: string) { return modules.get(name) } } as never
  await writeFile(join(root, 'cordis.yml'), [
    '- name: sessions', '- name: agents', '- name: llm', '- name: prompt', '  config:', '    persona: MCP fixture',
    '- name: tools', '  config:', '    mode: native', '- name: loop', '- name: questions', '- name: persistence', '  config:',
    `    root: ${JSON.stringify(join(root, 'logs'))}`, '    compression: none',
  ].join('\n') + '\n')
  await ctx.loader.create({ name: 'cordis:include', config: { path: pathToFileURL(join(root, 'cordis.yml')).href } })
  await ctx.loader.await()
  const api = createApiProxy(ctx, { cwd: root, defaultModelSelection: () => ({ provider: 'fixture', model: 'model' }) })
  const handler = toFetchHandler(api)
  return { ctx, handler, client: new InProcessApiClient(handler) }
}

async function installNative(handler: ReturnType<typeof toFetchHandler>, profile: AgentProfileDefinition) {
  const ref = { id: profile.id, version: profile.version, digest: agentProfileDigest(profile) }
  const response = await handler.fetch(new Request('http://localhost/api/agentPreset.installProfile', {
    method: 'POST', headers: { 'content-type': 'application/json', authorization: 'Bearer test-native-installer' },
    body: JSON.stringify({ type: 'client-request', rpcId: 'install-native', method: 'agentPreset.installProfile', payload: { profile, digest: ref.digest } }),
  }))
  expect(response.status).toBe(200)
  expect(value(await response.json() as { result: { ok: true; value: unknown } })).toEqual({ profile: ref, created: true })
  return ref
}

it('installs native tools through the profile API, isolates private state and recovers without replay', async () => {
  root = await mkdtemp(join(tmpdir(), 'dsh-native-profile-'))
  vi.stubEnv('DSH_HOME', root)
  vi.stubEnv('DSH_PROFILE_INSTALL_TOKEN', 'test-native-installer')
  vi.stubEnv('DSH_ALLOW_NATIVE_TOOLS', '1')
  const { ctx, handler, client } = await boot()
  const source = `import { readFile, writeFile } from 'node:fs/promises';
export function createTools({stateDirectory, binding}) {
  return [{name:'remember',description:'Remember a word and return the previous word',
    parameters:{type:'object',properties:{word:{type:'string'}},required:['word'],additionalProperties:false},
    output:{schema:{type:'string'},render:(_args,value)=>[{type:'text',text:value}]},
    async execute({word}) {
      let previous = 'empty';
      try { previous = await readFile(stateDirectory+'/word','utf8') } catch(e) { if(e.code!=='ENOENT') throw e }
      await writeFile(stateDirectory+'/word',word,{mode:0o600});
      return previous;
    }}];
}`
  const profile: AgentProfileDefinition = { schemaVersion: 2, id: 'native-fixture', version: '1', systemPrompt: 'Use the supplied tools.', tools: { native: { source, toolNames: ['remember'] }, mcp: [] } }
  const ref = await installNative(handler, profile)
  const binding = { tenant: 'private-tenant', user: 'private-user', conversation: 'a' }
  const id = SessionId('native-a')
  const payload = { sessionId: id, agentProfile: ref, nativeToolBinding: binding }
  const created = value(await client.sessions.create(payload))
  expect(created.agentProfile?.toolNames).toEqual(['remember'])
  expect(created.policy?.id).toBe('managed-agent-profile-v2')
  expect(value(await client.sessions.create(payload))).toEqual(created)
  expect((await client.sessions.create({ ...payload, nativeToolBinding: { ...binding, user: 'different' } })).result).toMatchObject({ ok: false, error: { code: 'agent-profile-conflict' } })
  expect((await client.sessions.create({ sessionId: id, agentProfile: ref })).result.ok).toBe(false)
  const other = SessionId('native-b')
  value(await client.sessions.create({ ...payload, sessionId: other, nativeToolBinding: { ...binding, conversation: 'b' } }))
  const mock = new MockAdapter([toolCallResponse('a', 'remember', { word: 'apple' }), textResponse('Stored'), toolCallResponse('b', 'remember', { word: 'banana' }), textResponse('Stored')])
  ctx.llm.registerAdapter(['fixture'], mock)
  for (const sessionId of [id, other]) {
    const agent = ctx.agents.get(sessionId)!
    agent.followup(createUserMessage({ content: [{ type: 'text', text: 'Remember my word' }], source: { kind: 'user' } }))
    await agent.whenIdle()
  }
  expect(mock.requests[1]!.messages.flatMap(message => message.content).filter(block => block.type === 'tool-result')).toMatchSnapshot()
  expect(JSON.stringify(mock.requests)).not.toContain('private-user')
  expect(JSON.stringify(ctx.agents.get(id)!.session.events)).not.toContain('stateDirectory')
  expect(JSON.stringify(mock.requests[3]?.messages)).toContain('empty')
  await ctx.sessions.flush(ctx.agents.get(id)!.session)
  await ctx.fiber.dispose(); contexts.splice(contexts.indexOf(ctx), 1)
  const resumed = await boot()
  expect((await resumed.client.sessions.create({ ...payload, nativeToolBinding: { ...binding, tenant: 'wrong' } })).result.ok).toBe(false)
  expect(value(await resumed.client.sessions.create(payload)).agentProfile).toEqual(created.agentProfile)
  const next = new MockAdapter([toolCallResponse('c', 'remember', { word: 'cherry' }), textResponse('Stored')])
  resumed.ctx.llm.registerAdapter(['fixture'], next)
  const agent = resumed.ctx.agents.get(id)!
  agent.followup(createUserMessage({ content: [{ type: 'text', text: 'Remember another word' }], source: { kind: 'user' } }))
  await agent.whenIdle()
  expect(next.requests[1]!.messages.flatMap(message => message.content).filter(block => block.type === 'tool-result')).toMatchSnapshot()
})

function value<T>(response: { result: { ok: true; value: T } | { ok: false; error: unknown } }): T {
  if (!response.result.ok) throw new Error(JSON.stringify(response.result.error))
  return response.result.value
}

it('admits an explicit MCP subset alongside native tools and rejects bad module rosters', async () => {
  root = await mkdtemp(join(tmpdir(), 'dsh-mixed-profile-'))
  vi.stubEnv('DSH_HOME', root)
  vi.stubEnv('DSH_PROFILE_INSTALL_TOKEN', 'test-native-installer')
  vi.stubEnv('DSH_ALLOW_NATIVE_TOOLS', '1')
  const { ctx, handler, client } = await boot()
  const { attachment, calls } = await endpoint()
  const profile: AgentProfileDefinition = { schemaVersion: 2, id: 'mixed', version: '1', systemPrompt: 'Use the supplied tools.', tools: { native: {
    toolNames: ['echo'], source: 'export function createTools(){return [{name:\'echo\',description:\'Echo a word\',parameters:{type:\'object\',properties:{word:{type:\'string\'}},required:[\'word\'],additionalProperties:false},output:{schema:{type:\'string\'},render:(_,value)=>[{type:\'text\',text:value}]},async execute({word}){return word}}]}',
  }, mcp: ['mcp__api_vxapp__get_invoice'] } }
  const ref = await installNative(handler, profile)
  const id = SessionId('mixed')
  const payload = { sessionId: id, agentProfile: ref, nativeToolBinding: {}, mcpAttachment: attachment }
  expect(value(await client.sessions.create(payload)).agentProfile?.toolNames).toEqual(['echo', 'mcp__api_vxapp__get_invoice'])
  const excluded = await installNative(handler, { ...profile, version: '2', tools: { ...profile.tools, mcp: [] } })
  const other = SessionId('excluded')
  expect(value(await client.sessions.create({ ...payload, sessionId: other, agentProfile: excluded })).agentProfile?.toolNames).toEqual(['echo'])
  const mock = new MockAdapter([
    toolCallResponse('bad-args', 'echo', { word: 'ok', extra: true }), textResponse('Rejected'),
    toolCallResponse('hidden', 'mcp__api_vxapp__get_invoice', {}), textResponse('Rejected'),
  ])
  ctx.llm.registerAdapter(['fixture'], mock)
  for (const sessionId of [id, other]) {
    const agent = ctx.agents.get(sessionId)!
    agent.followup(createUserMessage({ content: [{ type: 'text', text: 'Try the tool' }], source: { kind: 'user' } }))
    await agent.whenIdle()
  }
  expect(calls).toEqual([])
  for (const index of [1, 3]) expect(mock.requests[index]!.messages.flatMap(message => message.content).filter(block => block.type === 'tool-result')).toMatchObject([{ isError: true }])
  const broken = await installNative(handler, { ...profile, version: 'bad', tools: { native: { ...profile.tools.native, toolNames: ['missing'] }, mcp: [] } })
  expect((await client.sessions.create({ ...payload, sessionId: SessionId('bad-module'), agentProfile: broken })).result).toMatchObject({ ok: false, error: { code: 'agent-profile-invalid' } })
  expect(ctx.agents.get(SessionId('bad-module'))).toBeUndefined()
})

async function endpoint() {
  const calls: string[] = []
  const server = createServer((req, res) => {
    void (async () => {
      if (req.method !== 'POST') { res.writeHead(405).end(); return }
      if (req.headers.authorization === 'invalid') { res.writeHead(401).end(); return }
      let body = ''
      for await (const chunk of req) body += String(chunk)
      const rpc = JSON.parse(body) as { id?: number; method: string }
      if (rpc.id === undefined) { res.writeHead(202).end(); return }
      let result: unknown
      if (rpc.method === 'initialize') result = { protocolVersion: '2025-03-26', capabilities: { tools: {} }, serverInfo: { name: 'api-fixture', version: '1' } }
      else if (rpc.method === 'tools/list') result = { tools: [{ name: 'get_invoice', description: 'Get a fixture invoice', inputSchema: { type: 'object', properties: {} }, outputSchema: { type: 'object', properties: { invoice: { type: 'string' } }, required: ['invoice'] } }] }
      else if (rpc.method === 'tools/call') {
        const invoice = String(req.headers.authorization)
        calls.push(invoice)
        result = { content: [{ type: 'text', text: JSON.stringify({ invoice }) }], structuredContent: { invoice } }
      } else result = {}
      res.writeHead(200, { 'Content-Type': 'application/json' }).end(JSON.stringify({ jsonrpc: '2.0', id: rpc.id, result }))
    })().catch((error: unknown) => { res.writeHead(500).end(String(error)) })
  })
  servers.push(server)
  await new Promise<void>(resolve => server.listen(0, '127.0.0.1', resolve))
  const address = server.address()
  if (!address || typeof address === 'string') throw new Error('No fixture port')
  const attachment: SessionMcpAttachment = { version: 1, transport: 'streamable-http', serverName: 'api_vxapp', url: `http://127.0.0.1:${address.port}/v2/Ai/Mcp`, headers: { Authorization: 'tenant-a' }, toolCallTimeoutMs: 1000, failOnStartupError: true }
  return { attachment, calls }
}

it('discovers through HTTP, isolates same-named session attachments, runs a tool and requires explicit reattachment after restart', async () => {
  root = await mkdtemp(join(tmpdir(), 'dsh-session-mcp-'))
  const { attachment, calls } = await endpoint()
  const { ctx, client } = await boot()
  expect(value(await client.host.describe({})).mcpAttachmentVersions).toEqual([1])
  const id = SessionId('mcp-a')
  const created = value(await client.sessions.create({ sessionId: id, mcpAttachment: attachment }))
  expect(created.mcpAttachment).toEqual({ version: 1, serverName: 'api_vxapp', toolNames: ['mcp__api_vxapp__get_invoice'] })
  expect(value(await client.sessions.create({ sessionId: id, mcpAttachment: attachment }))).toEqual(created)
  expect((await client.sessions.create({ sessionId: id, mcpAttachment: { ...attachment, headers: { Authorization: 'changed' } } })).result).toMatchObject({ ok: false, error: { code: 'mcp-attachment-conflict' } })
  const other = SessionId('mcp-b')
  value(await client.sessions.create({ sessionId: other, mcpAttachment: { ...attachment, headers: { Authorization: 'tenant-b' } } }))
  const ordinary = value(await client.sessions.create({ sessionId: SessionId('ordinary') }))
  expect(ctx.tools.schemas(ctx.agents.get(ordinary.sessionId))).toEqual([])
  const mock = new MockAdapter([
    toolCallResponse('a', 'mcp__api_vxapp__get_invoice', {}), textResponse('Invoice A read'),
    toolCallResponse('b', 'mcp__api_vxapp__get_invoice', {}), textResponse('Invoice B read'),
  ])
  ctx.llm.registerAdapter(['fixture'], mock)
  for (const sessionId of [id, other]) {
    const agent = ctx.agents.get(sessionId)!
    agent.followup(createUserMessage({ content: [{ type: 'text', text: 'Get my invoice' }], source: { kind: 'user' } }))
    await agent.whenIdle()
  }
  expect(mock.requests[1]!.messages.flatMap(message => message.content).filter(block => block.type === 'tool-result')).toMatchSnapshot()
  expect(calls).toEqual(['tenant-a', 'tenant-b'])
  expect(JSON.stringify(mock.requests[1]?.messages)).toContain('tenant-a')
  expect(JSON.stringify(mock.requests[3]?.messages)).toContain('tenant-b')
  expect(JSON.stringify(mock.requests[1]?.messages)).not.toContain('tenant-b')
  await ctx.sessions.flush(ctx.agents.get(id)!.session)
  await ctx.fiber.dispose(); contexts.splice(contexts.indexOf(ctx), 1)
  const resumed = await boot()
  expect((await resumed.client.sessions.create({ sessionId: id })).result).toMatchObject({
    ok: false, error: { code: 'mcp-attachment-required' },
  })
  const restored = value(await resumed.client.sessions.create({ sessionId: id, mcpAttachment: attachment }))
  expect(restored.mcpAttachment).toEqual(created.mcpAttachment)
  expect(calls).toEqual(['tenant-a', 'tenant-b'])
})

it('fails creation on authentication error and rejects unsupported attachment inputs', async () => {
  root = await mkdtemp(join(tmpdir(), 'dsh-session-mcp-'))
  const { attachment, calls } = await endpoint()
  const { ctx, client } = await boot()
  const id = SessionId('failed')
  expect((await client.sessions.create({ sessionId: id, mcpAttachment: { ...attachment, headers: { Authorization: 'invalid' } } })).result).toMatchObject({ ok: false, error: { code: 'mcp-attachment-failed' } })
  expect(ctx.agents.get(id)).toBeUndefined()
  expect(calls).toEqual([])
  expect((await client.sessions.create({ mcpAttachment: { ...attachment, version: 2 } as never })).result.ok).toBe(false)
  expect((await client.sessions.create({ mcpAttachment: { ...attachment, url: 'file:///tmp/mcp' } })).result.ok).toBe(false)
})
