// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`discovers through HTTP, isolates same-named session attachments, runs a tool and requires explicit reattachment after restart 1`] = `
[
  {
    "content": [
      {
        "text": "{"invoice":"tenant-a"}",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "a",
    "type": "tool-result",
  },
]
`;

exports[`installs native tools through the profile API, isolates private state and recovers without replay 1`] = `
[
  {
    "content": [
      {
        "text": "empty",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "a",
    "type": "tool-result",
  },
]
`;

exports[`installs native tools through the profile API, isolates private state and recovers without replay 2`] = `
[
  {
    "content": [
      {
        "text": "empty",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "a",
    "type": "tool-result",
  },
  {
    "content": [
      {
        "text": "apple",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "c",
    "type": "tool-result",
  },
]
`;
